src/objects/c2g__codaGeneralLedgerAccount__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpgeneralledgeraccount</customHelpPage>
    <description>General ledger account represent different categories of income/expenses/assets/liabilities and reserves.</description>
    <fields>
        <fullName>Balance_Sheet_Rec_Owner__c</fullName>
        <description>Created to display the person responsible for reconciling the record balance sheet. 
This could be replaced with a lookup(contact) field if bruntwood employees are being added as contacts.</description>
        <inlineHelpText>Enter the name of the person responsible for reconciling the balance sheet</inlineHelpText>
        <label>Balance Sheet Rec Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_1_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 1 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension_2_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 2 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension_3_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 3 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Ledger_Required__c</fullName>
        <label>Sub Ledger Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowRevaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Revaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet1__c</fullName>
        <label>Balance Sheet 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet2__c</fullName>
        <label>Balance Sheet 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__BalanceSheet1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Long Term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Shareholders Funds</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet3__c</fullName>
        <label>Balance Sheet 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__BalanceSheet2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bank and Cash</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Provisions</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Prepayments and Accrued Income</fullName>
                </value>
                <value>
                    <fullName>Debtors</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Fixtures Fittings and Equipment</fullName>
                </value>
                <value>
                    <fullName>Land and Buildings</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accruals and Deferred Income</fullName>
                </value>
                <value>
                    <fullName>Employment Payables</fullName>
                </value>
                <value>
                    <fullName>Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Creditors</fullName>
                </value>
                <value>
                    <fullName>Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Payable After 1 Year</fullName>
                </value>
                <value>
                    <fullName>Creditors Due After 1 Year</fullName>
                </value>
                <value>
                    <fullName>Capital and Reserves</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <description>Cash Flow Category</description>
        <label>Cash Flow Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Activities</fullName>
                </value>
                <value>
                    <fullName>Investing Activities</fullName>
                </value>
                <value>
                    <fullName>Financing Activities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <label>Cash Flow Line Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(Gain) / Loss on Foreign Exchange</fullName>
                </value>
                <value>
                    <fullName>(Gain) / Loss on Investment Disposals</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Inventory</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Other Current Assets</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Receivables</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Depreciation &amp; Amortization</fullName>
                </value>
                <value>
                    <fullName>Dividends on Common Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends on Preference Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends Received</fullName>
                </value>
                <value>
                    <fullName>Impairment</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Common Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Long Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Other Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Payables</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Preference Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Short Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Purchase of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Purchase of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sale of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Sales Proceeds from Disposal of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Unrealized (Gain) / Loss on Foreign Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ChartOfAccountsStructure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chart of Accounts Structure</label>
        <referenceTo>c2g__ChartOfAccountsStructure__c</referenceTo>
        <relationshipLabel>General Ledger Accounts</relationshipLabel>
        <relationshipName>GeneralLedgerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GLAGroup__c</fullName>
        <label>GLA Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance1__c</fullName>
        <label>Trial Balance 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance2__c</fullName>
        <label>Trial Balance 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__TrialBalance1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gross Profit</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Interest and Taxation</fullName>
                </value>
                <value>
                    <fullName>EBITDA</fullName>
                </value>
                <value>
                    <fullName>Depreciation and Amortization</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Long Term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Shareholders Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance3__c</fullName>
        <label>Trial Balance 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__TrialBalance2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Revenue</fullName>
                </value>
                <value>
                    <fullName>Cost of Sales</fullName>
                </value>
                <value>
                    <fullName>Administration Costs</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Equipment Hire and Repairs</fullName>
                </value>
                <value>
                    <fullName>Marketing Expenses</fullName>
                </value>
                <value>
                    <fullName>Motor Expenses</fullName>
                </value>
                <value>
                    <fullName>Occupation Costs</fullName>
                </value>
                <value>
                    <fullName>Payroll Costs</fullName>
                </value>
                <value>
                    <fullName>Professional Fees</fullName>
                </value>
                <value>
                    <fullName>Staff Costs</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Other Income and Expenses</fullName>
                </value>
                <value>
                    <fullName>Finance Costs</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Bank and Cash</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Provisions</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Prepayments and Accrued Income</fullName>
                </value>
                <value>
                    <fullName>Debtors</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Fixtures Fittings and Equipment</fullName>
                </value>
                <value>
                    <fullName>Land and Buildings</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accruals and Deferred Income</fullName>
                </value>
                <value>
                    <fullName>Employment Payables</fullName>
                </value>
                <value>
                    <fullName>Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Creditors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>General Ledger Account</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__ReportingCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>c2g__GeneralLedgerAccountsinclHierarchy</fullName>
        <columns>NAME</columns>
        <columns>c2g__ReportingCode__c</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__TrialBalance1__c</columns>
        <columns>c2g__TrialBalance2__c</columns>
        <columns>c2g__TrialBalance3__c</columns>
        <columns>c2g__TrialBalance4__c</columns>
        <columns>c2g__BalanceSheet1__c</columns>
        <columns>c2g__BalanceSheet2__c</columns>
        <columns>c2g__BalanceSheet3__c</columns>
        <filterScope>Everything</filterScope>
        <label>General Ledger Accounts with Hierarchy</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Ledger Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>